; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_smtp-mail.c_payload_source.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_smtp-mail.c_payload_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.upload_status = type { i64 }

@payload_text = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i8*)* @payload_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @payload_source(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.upload_status*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = bitcast i8* %13 to %struct.upload_status*
  store %struct.upload_status* %14, %struct.upload_status** %10, align 8
  %15 = load i64, i64* %7, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %25, label %17

17:                                               ; preds = %4
  %18 = load i64, i64* %8, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %17
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* %8, align 8
  %23 = mul i64 %21, %22
  %24 = icmp ult i64 %23, 1
  br i1 %24, label %25, label %26

25:                                               ; preds = %20, %17, %4
  store i64 0, i64* %5, align 8
  br label %48

26:                                               ; preds = %20
  %27 = load i8**, i8*** @payload_text, align 8
  %28 = load %struct.upload_status*, %struct.upload_status** %10, align 8
  %29 = getelementptr inbounds %struct.upload_status, %struct.upload_status* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = getelementptr inbounds i8*, i8** %27, i64 %30
  %32 = load i8*, i8** %31, align 8
  store i8* %32, i8** %11, align 8
  %33 = load i8*, i8** %11, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %47

35:                                               ; preds = %26
  %36 = load i8*, i8** %11, align 8
  %37 = call i64 @strlen(i8* %36)
  store i64 %37, i64* %12, align 8
  %38 = load i8*, i8** %6, align 8
  %39 = load i8*, i8** %11, align 8
  %40 = load i64, i64* %12, align 8
  %41 = call i32 @memcpy(i8* %38, i8* %39, i64 %40)
  %42 = load %struct.upload_status*, %struct.upload_status** %10, align 8
  %43 = getelementptr inbounds %struct.upload_status, %struct.upload_status* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = add i64 %44, 1
  store i64 %45, i64* %43, align 8
  %46 = load i64, i64* %12, align 8
  store i64 %46, i64* %5, align 8
  br label %48

47:                                               ; preds = %26
  store i64 0, i64* %5, align 8
  br label %48

48:                                               ; preds = %47, %35, %25
  %49 = load i64, i64* %5, align 8
  ret i64 %49
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
